rawlings-demo/force-app/main/default/objects/Lien__c/Lien__c.object-meta.xml
<CustomObject>
    <label>Lien</label>
    <pluralLabel>Liens</pluralLabel>
    <nameField>
        <label>Lien Name</label>
        <type>AutoNumber</type>
        <displayFormat>LN-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>