rawlings-demo/force-app/main/default/objects/Lien__c/fields/Administrator_Position__c.field-meta.xml
<CustomField>
    <fullName>Administrator_Position__c</fullName>
    <label>Administrator Position</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>