rawlings-demo/force-app/main/default/objects/Lien__c/fields/Agreed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Amount__c</fullName>
    <label>Agreed Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>