rawlings-demo/force-app/main/default/objects/Lien__c/fields/Claimant_ID__c.field-meta.xml
<CustomField>
    <fullName>Claimant_ID__c</fullName>
    <label>Claimant ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>