rawlings-demo/force-app/main/default/objects/Lien__c/fields/Claimant_Name__c.field-meta.xml
<CustomField>
    <fullName>Claimant_Name__c</fullName>
    <label>Claimant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>