rawlings-demo/force-app/main/default/objects/Lien__c/fields/Coverage_Result__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Result__c</fullName>
    <label>Coverage Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Unable to Confirm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>