rawlings-demo/force-app/main/default/objects/Lien__c/fields/Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Days_Remaining__c</fullName>
    <label>Days Remaining</label>
    <type>Number</type>
    <formula>Response_Deadline__c - TODAY()</formula>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>