rawlings-demo/force-app/main/default/objects/Lien__c/fields/Deadline_Status__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Status__c</fullName>
    <label>Deadline Status</label>
    <type>Text</type>
    <formula>IF(Days_Remaining__c &gt; 20, &quot;Green&quot;,
  IF(Days_Remaining__c &gt; 10, &quot;Yellow&quot;, &quot;Red&quot;))</formula>
</CustomField>