rawlings-demo/force-app/main/default/objects/Lien__c/fields/Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Reason__c</fullName>
    <label>Escalation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>