rawlings-demo/force-app/main/default/objects/Lien__c/fields/Finance_Instruction_Filename__c.field-meta.xml
<CustomField>
    <fullName>Finance_Instruction_Filename__c</fullName>
    <label>Finance Instruction Filename</label>
    <type>Text</type>
    <length>255</length>
</CustomField>