rawlings-demo/force-app/main/default/objects/Lien__c/fields/Finance_Instruction_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Finance_Instruction_Generated_At__c</fullName>
    <label>Finance Instruction Generated At</label>
    <type>DateTime</type>
</CustomField>