rawlings-demo/force-app/main/default/objects/Lien__c/fields/Finance_Instruction_Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Finance_Instruction_Generated_By__c</fullName>
    <label>Finance Instruction Generated By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Finance Instructions Generated</relationshipLabel>
    <relationshipName>Finance_Instructions_Generated</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>