rawlings-demo/force-app/main/default/objects/Lien__c/fields/Health_Plan__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan__c</fullName>
    <label>Health Plan</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>