rawlings-demo/force-app/main/default/objects/Lien__c/fields/Health_Plan_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Allocation__c</fullName>
    <label>Health Plan Allocation</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>