rawlings-demo/force-app/main/default/objects/Lien__c/fields/Health_Plan_Text__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_Text__c</fullName>
    <label>Health Plan Name</label>
    <length>255</length>
    <type>Text</type>
    <description>Plain-text denormalized copy of Health_Plan__c's Account Name, set by ClaimantImportController at import time. Exists because criteria-based sharing rules cannot reference Lookup fields, and (per platform restriction) not even a cross-object formula field derived from one.</description>
</CustomField>