rawlings-demo/force-app/main/default/objects/Lien__c/fields/Injury_Category__c.field-meta.xml
<CustomField>
    <fullName>Injury_Category__c</fullName>
    <label>Injury Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>