rawlings-demo/force-app/main/default/objects/Lien__c/fields/Negotiation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Reason__c</fullName>
    <label>Negotiation Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>