rawlings-demo/force-app/main/default/objects/Lien__c/fields/Payment_Variance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Variance__c</fullName>
    <label>Payment Variance</label>
    <type>Currency</type>
    <formula>Remittance_Amount__c - Agreed_Amount__c</formula>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>