rawlings-demo/force-app/main/default/objects/Lien__c/fields/Rawlings_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Rawlings_Allocation__c</fullName>
    <label>Rawlings Allocation</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>