rawlings-demo/force-app/main/default/objects/Lien__c/fields/Response_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Response_Deadline__c</fullName>
    <label>Response Deadline</label>
    <type>Date</type>
</CustomField>