rawlings-demo/force-app/main/default/objects/Lien__c/fields/Settlement__c.field-meta.xml
<CustomField>
    <fullName>Settlement__c</fullName>
    <label>Settlement</label>
    <type>Lookup</type>
    <referenceTo>Settlement__c</referenceTo>
    <relationshipLabel>Liens</relationshipLabel>
    <relationshipName>Liens</relationshipName>
    <required>true</required>
    <deleteConstraint>Cascade</deleteConstraint>
</CustomField>