rawlings-demo/force-app/main/default/objects/Lien__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake</fullName>
                <default>true</default>
                <label>Intake</label>
            </value>
            <value>
                <fullName>Coverage Confirmed</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Response Ready</fullName>
            </value>
            <value>
                <fullName>Response Submitted</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Agreed</fullName>
            </value>
            <value>
                <fullName>Pre-Validation</fullName>
            </value>
            <value>
                <fullName>Recovery Calculated</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>