rawlings-demo/force-app/main/default/objects/Lien__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <operation>notEqual</operation>
        <field>Stage__c</field>
        <value/>
    </filters>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Claimant_Name__c</columns>
    <columns>Health_Plan__c</columns>
    <columns>Stage__c</columns>
    <columns>Deadline_Status__c</columns>
    <columns>Days_Remaining__c</columns>
</ListView>